シフト作成ロジックの完成